--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
         "@prettier/plugin-pug": "1.1.6",
         "@sbpro/ng": "1.1.1",
         "chart.js": "2.9.3",
+        "marked": "0.8.0",
+        "ngx-markdown": "9.0.0",
         "object-hash": "2.0.1",
+        "prism": "4.1.2",
         "rxjs": "6.5.4",
         "tslib": "^1.10.0",
         "uuid": "3.4.0",
@@ -65,8 +68,10 @@
         "@types/chart.js": "2.9.13",
         "@types/jasmine": "3.5.3",
         "@types/jasminewd2": "2.0.8",
+        "@types/marked": "0.7.2",
         "@types/node": "^12.11.1",
         "@types/object-hash": "1.3.1",
+        "@types/prismjs": "1.16.0",
         "@types/uuid": "3.4.7",
         "bootstrap": "4.4.1",
         "chokidar": "3.3.1",
