--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@angular/platform-browser": "9.0.0",
         "@angular/platform-browser-dynamic": "9.0.0",
         "@angular/router": "9.0.0",
+        "@auth0/angular-jwt": "4.0.0",
         "@fortawesome/angular-fontawesome": "0.6.0",
         "@fortawesome/fontawesome-svg-core": "1.2.27",
         "@fortawesome/free-brands-svg-icons": "5.12.1",
