--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "@sbpro/ng": "1.1.1",
         "chart.js": "2.9.3",
         "marked": "0.8.0",
+        "ngx-autosize": "1.7.5",
         "ngx-markdown": "9.0.0",
         "object-hash": "2.0.1",
         "prism": "4.1.2",
