added cross-env, enabled ivy, added edit post button on post page.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "angularCompilerOptions": {
-        "enableIvy": false,
+        "enableIvy": true,
         "fullTemplateTypeCheck": true,
         "preserveWhitespaces": false,
         "strictInjectionParameters": true
