--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "link": "npm link @start-bootstrap/sb-clean-blog-shared-types",
         "lint:fix": "npm run ng -- lint --fix",
         "lint": "npm run ng -- lint",
-        "ng": "node --max_old_space_size=2048 ./node_modules/.bin/ng",
+        "ng": "cross-env NODE_OPTIONS=--max_old_space_size=2048 ./node_modules/.bin/ng",
         "serve": "./node_modules/.bin/static-server dist/sb-clean-blog-angular",
         "start": "node scripts/start.js",
         "test": "npm run ng -- test"
@@ -32,60 +32,62 @@
     "homepage": "https://github.com/StartBootstrap/sb-clean-blog-angular#readme",
     "private": true,
     "dependencies": {
-        "@angular/animations": "9.0.0",
-        "@angular/common": "9.0.0",
-        "@angular/compiler": "9.0.0",
-        "@angular/core": "9.0.0",
-        "@angular/forms": "9.0.0",
-        "@angular/platform-browser": "9.0.0",
-        "@angular/platform-browser-dynamic": "9.0.0",
-        "@angular/router": "9.0.0",
+        "@angular/animations": "9.0.4",
+        "@angular/common": "9.0.4",
+        "@angular/compiler": "9.0.4",
+        "@angular/core": "9.0.4",
+        "@angular/forms": "9.0.4",
+        "@angular/localize": "9.0.4",
+        "@angular/platform-browser": "9.0.4",
+        "@angular/platform-browser-dynamic": "9.0.4",
+        "@angular/router": "9.0.4",
         "@auth0/angular-jwt": "4.0.0",
         "@fortawesome/angular-fontawesome": "0.6.0",
         "@fortawesome/fontawesome-svg-core": "1.2.27",
         "@fortawesome/free-brands-svg-icons": "5.12.1",
         "@fortawesome/free-regular-svg-icons": "5.12.1",
         "@fortawesome/free-solid-svg-icons": "5.12.1",
-        "@ng-bootstrap/ng-bootstrap": "5.2.2",
-        "@prettier/plugin-pug": "1.1.6",
+        "@ng-bootstrap/ng-bootstrap": "6.0.0",
+        "@prettier/plugin-pug": "1.1.9",
         "@sbpro/ng": "1.1.1",
         "chart.js": "2.9.3",
         "marked": "0.8.0",
         "ngx-autosize": "1.7.5",
         "ngx-markdown": "9.0.0",
-        "object-hash": "2.0.1",
+        "object-hash": "2.0.3",
         "prism": "4.1.2",
         "rxjs": "6.5.4",
-        "tslib": "^1.10.0",
-        "uuid": "3.4.0",
+        "tslib": "1.11.1",
+        "uuid": "7.0.1",
         "webpack-bundle-analyzer": "^3.6.0",
         "zone.js": "0.10.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.900.1",
-        "@angular/cli": "9.0.1",
-        "@angular/compiler-cli": "9.0.0",
-        "@angular/language-service": "9.0.0",
+        "@angular-devkit/build-angular": "0.900.4",
+        "@angular/cli": "9.0.4",
+        "@angular/compiler-cli": "9.0.4",
+        "@angular/language-service": "9.0.4",
         "@inip/static-server": "1.0.1",
         "@start-bootstrap/sb-clean-blog-shared-types": "1.0.0",
-        "@types/chart.js": "2.9.13",
-        "@types/jasmine": "3.5.3",
+        "@types/chart.js": "2.9.14",
+        "@types/jasmine": "3.5.7",
         "@types/jasminewd2": "2.0.8",
         "@types/marked": "0.7.2",
-        "@types/node": "^12.11.1",
+        "@types/node": "13.7.7",
         "@types/object-hash": "1.3.1",
         "@types/prismjs": "1.16.0",
-        "@types/uuid": "3.4.7",
+        "@types/uuid": "7.0.0",
         "bootstrap": "4.4.1",
         "chokidar": "3.3.1",
         "codelyzer": "5.2.1",
         "concurrently": "5.1.0",
+        "cross-env": "7.0.0",
         "jasmine-core": "3.5.0",
         "jasmine-spec-reporter": "4.2.1",
         "karma": "4.4.1",
         "karma-chrome-launcher": "3.1.0",
         "karma-coverage-istanbul-reporter": "2.1.1",
-        "karma-jasmine": "3.1.0",
+        "karma-jasmine": "3.1.1",
         "karma-jasmine-html-reporter": "1.5.2",
         "prettier": "1.19.1",
         "protractor": "5.4.3",
