working through tests

--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
         "docker:build": "node scripts/docker/docker-build.js",
         "docker:run": "node scripts/docker/docker-run.js",
         "e2e": "npm run ng -- e2e",
-        "generate:component": "./node_modules/.bin/ng generate @sbpro/ng:component",
-        "generate:directive": "./node_modules/.bin/ng generate @sbpro/ng:directive",
-        "generate:module": "./node_modules/.bin/ng generate @sbpro/ng:module",
-        "generate:service": "./node_modules/.bin/ng generate @sbpro/ng:service",
+        "generate:component": "ng generate @sbpro/ng:component",
+        "generate:directive": "ng generate @sbpro/ng:directive",
+        "generate:module": "ng generate @sbpro/ng:module",
+        "generate:service": "ng generate @sbpro/ng:service",
         "link": "npm link @start-bootstrap/sb-clean-blog-shared-types",
         "lint:fix": "npm run ng -- lint --fix",
         "lint": "npm run ng -- lint",
         "ng": "cross-env NODE_OPTIONS=--max_old_space_size=2048 ./node_modules/.bin/ng",
-        "serve": "./node_modules/.bin/static-server dist/sb-clean-blog-angular",
+        "serve": "static-server dist/sb-clean-blog-angular",
+        "serve:coverage": "static-server ./coverage/sb-clean-blog-angular 9753",
         "start": "node scripts/start.js",
-        "test": "npm run ng -- test"
+        "test": "npm run ng -- test --watch=false --code-coverage --browsers=ChromeHeadlessNoSandbox",
+        "test:dev": "node scripts/test-dev.js",
+        "version": "node scripts/version"
     },
     "repository": {
         "type": "git",
