--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,8 @@
                         "stylePreprocessorOptions": {
                             "includePaths": ["src", "./node_modules"]
                         },
-                        "scripts": []
+                        "scripts": [],
+                        "codeCoverageExclude": ["src/testing/**/*"]
                     }
                 },
                 "lint": {
