--- a/nginx.conf
+++ b/nginx.conf
@@ -35,12 +35,16 @@ http {
             return 200;
         }
 
+        location /assets/config.json {
+            add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+            try_files /config.json =404;
+        }
+
         location / {
-            location ~ / {
-                add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-                
-                try_files $uri /index.html =404;
-            }
+            add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+            
+            try_files $uri /index.html =404;
         }
 
         error_page   500 502 503 504  /50x.html;
