--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,14 @@ sudo: false
 
 language: node_js
 
+node_js:
+    -    12
+
 dist: trusty
+
 addons:
     chrome: stable
+    
 before_install:
     -   google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 
