--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
         "@fortawesome/free-solid-svg-icons": "5.12.1",
         "@ng-bootstrap/ng-bootstrap": "6.0.0",
         "@prettier/plugin-pug": "1.1.9",
-        "@sbpro/ng": "1.1.1",
         "chart.js": "2.9.3",
+        "crypto-js": "4.0.0",
         "marked": "0.8.0",
         "ngx-autosize": "1.7.5",
         "ngx-markdown": "9.0.0",
@@ -72,8 +72,10 @@
         "@angular/compiler-cli": "9.0.4",
         "@angular/language-service": "9.0.4",
         "@inip/static-server": "1.0.1",
+        "@sbpro/ng": "1.1.2",
         "@start-bootstrap/sb-clean-blog-shared-types": "1.0.1",
         "@types/chart.js": "2.9.14",
+        "@types/crypto-js": "3.1.43",
         "@types/jasmine": "3.5.7",
         "@types/jasminewd2": "2.0.8",
         "@types/marked": "0.7.2",
