set demo to false by default

--- a/src/modules/app-common/interceptors/demo.config.json
+++ b/src/modules/app-common/interceptors/demo.config.json
@@ -1,5 +1,5 @@
 {
-    "enabled": true,
+    "enabled": false,
     "posts": [
         {
             "id": "fc3e4766-51ac-4385-937b-43643ed26d4a",
