changing demo config to config service

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,3 +1,4 @@
 {
-    "sbCleanBlogNodeURL": "http://localhost:8200"
+    "sbCleanBlogNodeURL": "http://localhost:8200",
+    "demoEnabled": false
 }
