--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "link": "npm link @start-bootstrap/sb-clean-blog-shared-types",
         "lint:fix": "npm run ng -- lint --fix",
         "lint": "npm run ng -- lint",
+        "postinstall": "ngcc",
         "ng": "cross-env NODE_OPTIONS=--max_old_space_size=2048 ./node_modules/.bin/ng",
         "serve": "static-server dist/sb-clean-blog-angular",
         "serve:coverage": "static-server ./coverage/sb-clean-blog-angular 9753",
@@ -36,15 +37,15 @@
     "homepage": "https://github.com/StartBootstrap/sb-clean-blog-angular#readme",
     "private": true,
     "dependencies": {
-        "@angular/animations": "9.0.4",
-        "@angular/common": "9.0.4",
-        "@angular/compiler": "9.0.4",
-        "@angular/core": "9.0.4",
-        "@angular/forms": "9.0.4",
-        "@angular/localize": "9.0.4",
-        "@angular/platform-browser": "9.0.4",
-        "@angular/platform-browser-dynamic": "9.0.4",
-        "@angular/router": "9.0.4",
+        "@angular/animations": "10.0.5",
+        "@angular/common": "10.0.5",
+        "@angular/compiler": "10.0.5",
+        "@angular/core": "10.0.5",
+        "@angular/forms": "10.0.5",
+        "@angular/localize": "10.0.5",
+        "@angular/platform-browser": "10.0.5",
+        "@angular/platform-browser-dynamic": "10.0.5",
+        "@angular/router": "10.0.5",
         "@auth0/angular-jwt": "4.0.0",
         "@fortawesome/angular-fontawesome": "0.6.0",
         "@fortawesome/fontawesome-svg-core": "1.2.27",
@@ -62,17 +63,17 @@
         "ngx-markdown": "9.0.0",
         "object-hash": "2.0.3",
         "prism": "4.1.2",
-        "rxjs": "6.5.4",
-        "tslib": "1.11.1",
+        "rxjs": "6.6.0",
+        "tslib": "^2.0.0",
         "uuid": "7.0.1",
         "webpack-bundle-analyzer": "^3.6.0",
-        "zone.js": "0.10.2"
+        "zone.js": "0.10.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.900.4",
-        "@angular/cli": "9.0.4",
-        "@angular/compiler-cli": "9.0.4",
-        "@angular/language-service": "9.0.4",
+        "@angular-devkit/build-angular": "0.1000.4",
+        "@angular/cli": "10.0.4",
+        "@angular/compiler-cli": "10.0.5",
+        "@angular/language-service": "10.0.5",
         "@inip/static-server": "1.0.1",
         "@sbpro/ng": "1.1.2",
         "@start-bootstrap/sb-clean-blog-shared-types": "1.0.1",
@@ -87,24 +88,27 @@
         "@types/uuid": "7.0.0",
         "bootstrap": "4.4.1",
         "chokidar": "3.3.1",
-        "codelyzer": "5.2.1",
+        "codelyzer": "^6.0.0",
         "concurrently": "5.1.0",
         "cross-env": "7.0.0",
-        "jasmine-core": "3.5.0",
-        "jasmine-spec-reporter": "4.2.1",
-        "karma": "4.4.1",
-        "karma-chrome-launcher": "3.1.0",
-        "karma-coverage-istanbul-reporter": "2.1.1",
-        "karma-jasmine": "3.1.1",
-        "karma-jasmine-html-reporter": "1.5.2",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~5.0.0",
+        "karma": "~5.0.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~3.0.2",
+        "karma-jasmine": "~3.3.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
         "prettier": "1.19.1",
-        "protractor": "5.4.3",
+        "protractor": "~7.0.0",
         "pug": "2.0.4",
         "pug-lint": "2.6.0",
         "shelljs": "0.8.3",
         "ts-node": "8.6.2",
-        "tslint": "6.0.0",
+        "tslint": "~6.1.0",
         "tslint-plugin-prettier": "2.1.0",
-        "typescript": "3.7.5"
+        "typescript": "3.9.7"
+    },
+    "browser": {
+      "crypto": false
     }
 }
