--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,48 +1,17 @@
+/*
+  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
+  It is not intended to be used to perform a compilation.
+
+  To learn more about this file see: https://angular.io/config/solution-tsconfig.
+*/
 {
-    "angularCompilerOptions": {
-        "enableIvy": true,
-        "fullTemplateTypeCheck": true,
-        "preserveWhitespaces": false,
-        "strictInjectionParameters": true
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
     },
-    "compileOnSave": false,
-    "compilerOptions": {
-        "baseUrl": "src",
-        "declaration": false,
-        "downlevelIteration": true,
-        "emitDecoratorMetadata": true,
-        "esModuleInterop": true,
-        "experimentalDecorators": true,
-        "importHelpers": true,
-        "lib": [
-            "es2018",
-            "dom"
-        ],
-        "module": "esnext",
-        "moduleResolution": "node",
-        "noImplicitAny": true,
-        "outDir": "./dist/out-tsc",
-        "paths": {
-            "@app/*": [
-                "app/*"
-            ],
-            "@common/*": [
-                "modules/app-common/*"
-            ],
-            "@modules/*": [
-                "modules/*"
-            ],
-            "@testing/*": [
-                "testing/*"
-            ]
-        },
-        "resolveJsonModule": true,
-        "sourceMap": true,
-        "strict": true,
-        "target": "es2015",
-        "typeRoots": [
-            "node_modules/@types",
-            "src/typings"
-        ]
+    {
+      "path": "./tsconfig.spec.json"
     }
+  ]
 }
