--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
     "name": "sb-clean-blog-angular",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "scripts": {
         "build": "npm run build:pug && npm run ng -- build --prod --build-optimizer=true --statsJson=true && npm run build:version",
         "build:debug": "npm run build:pug && npm run ng -- build --prod --source-map --build-optimizer=true --statsJson=true && npm run build:version",
+        "build:demo": "npm run build && mv dist/sb-clean-blog-angular/assets/config-demo.json dist/sb-clean-blog-angular/assets/config.json",
         "build:pug": "node scripts/build-pug.js",
         "build:version": "node scripts/version.js",
         "bundle-report": "webpack-bundle-analyzer dist/sb-clean-blog-angular/stats-es2015.json",
         "docker:build": "node scripts/docker/docker-build.js",
         "docker:run": "node scripts/docker/docker-run.js",
+        "drone:upload": "npm run ts-node -- scripts/drone/upload.ts",
         "e2e": "npm run ng -- e2e",
         "e2e:running": "npm run ng -- e2e --dev-server-target=",
         "generate:component": "ng generate @sbpro/ng:component",
@@ -16,14 +18,15 @@
         "generate:module": "ng generate @sbpro/ng:module",
         "generate:service": "ng generate @sbpro/ng:service",
         "link": "npm link @start-bootstrap/sb-clean-blog-shared-types",
-        "lint:fix": "npm run ng -- lint --fix",
-        "lint": "npm run ng -- lint",
+        "lint:fix": "tslint -p . -c tslint.json --fix",
+        "lint": "tslint -p . -c tslint.json",
         "ng": "cross-env NODE_OPTIONS=--max_old_space_size=2048 ./node_modules/.bin/ng",
         "serve": "static-server dist/sb-clean-blog-angular",
         "serve:coverage": "static-server ./coverage/sb-clean-blog-angular 9753",
         "start": "node scripts/start.js",
         "test": "npm run ng -- test --watch=false --code-coverage --browsers=ChromeHeadlessNoSandbox",
         "test:dev": "node scripts/test-dev.js",
+        "ts-node": "ts-node -r tsconfig-paths/register -r dotenv/config -P node_modules/@start-bootstrap/drone-utils/dist/tsconfig-drone.json",
         "version": "node scripts/version"
     },
     "repository": {
@@ -36,75 +39,77 @@
     "homepage": "https://github.com/StartBootstrap/sb-clean-blog-angular#readme",
     "private": true,
     "dependencies": {
-        "@angular/animations": "9.0.4",
-        "@angular/common": "9.0.4",
-        "@angular/compiler": "9.0.4",
-        "@angular/core": "9.0.4",
-        "@angular/forms": "9.0.4",
-        "@angular/localize": "9.0.4",
-        "@angular/platform-browser": "9.0.4",
-        "@angular/platform-browser-dynamic": "9.0.4",
-        "@angular/router": "9.0.4",
-        "@auth0/angular-jwt": "4.0.0",
-        "@fortawesome/angular-fontawesome": "0.6.0",
-        "@fortawesome/fontawesome-svg-core": "1.2.27",
-        "@fortawesome/free-brands-svg-icons": "5.12.1",
-        "@fortawesome/free-regular-svg-icons": "5.12.1",
-        "@fortawesome/free-solid-svg-icons": "5.12.1",
-        "@ng-bootstrap/ng-bootstrap": "6.0.0",
-        "@prettier/plugin-pug": "1.1.9",
+        "@angular/animations": "10.1.1",
+        "@angular/common": "10.1.1",
+        "@angular/compiler": "10.1.1",
+        "@angular/core": "10.1.1",
+        "@angular/forms": "10.1.1",
+        "@angular/localize": "10.1.1",
+        "@angular/platform-browser": "10.1.1",
+        "@angular/platform-browser-dynamic": "10.1.1",
+        "@angular/router": "10.1.1",
+        "@auth0/angular-jwt": "5.0.1",
+        "@fortawesome/angular-fontawesome": "0.7.0",
+        "@fortawesome/fontawesome-svg-core": "1.2.30",
+        "@fortawesome/free-brands-svg-icons": "5.14.0",
+        "@fortawesome/free-regular-svg-icons": "5.14.0",
+        "@fortawesome/free-solid-svg-icons": "5.14.0",
+        "@ng-bootstrap/ng-bootstrap": "7.0.0",
+        "@prettier/plugin-pug": "1.5.1",
         "change-case": "4.1.1",
         "chart.js": "2.9.3",
         "crypto-js": "4.0.0",
-        "date-fns": "2.10.0",
-        "marked": "0.8.0",
-        "ngx-autosize": "1.7.5",
-        "ngx-markdown": "9.0.0",
+        "date-fns": "2.16.1",
+        "marked": "1.1.1",
+        "ngx-autosize": "1.8.0",
+        "ngx-markdown": "10.1.1",
         "object-hash": "2.0.3",
         "prism": "4.1.2",
-        "rxjs": "6.5.4",
-        "tslib": "1.11.1",
-        "uuid": "7.0.1",
-        "webpack-bundle-analyzer": "^3.6.0",
-        "zone.js": "0.10.2"
+        "rxjs": "6.6.3",
+        "tslib": "2.0.1",
+        "uuid": "8.3.0",
+        "webpack-bundle-analyzer": "3.8.0",
+        "zone.js": "0.11.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.900.4",
-        "@angular/cli": "9.0.4",
-        "@angular/compiler-cli": "9.0.4",
-        "@angular/language-service": "9.0.4",
+        "@angular-devkit/build-angular": "0.1001.1",
+        "@angular/cli": "10.1.1",
+        "@angular/compiler-cli": "10.1.1",
+        "@angular/language-service": "10.1.1",
+        "@google-cloud/storage": "5.3.0",
         "@inip/static-server": "1.0.1",
-        "@sbpro/ng": "1.1.2",
+        "@sbpro/ng": "1.4.1",
+        "@start-bootstrap/drone-utils": "0.1.6",
         "@start-bootstrap/sb-clean-blog-shared-types": "1.0.1",
-        "@types/chart.js": "2.9.14",
-        "@types/crypto-js": "3.1.43",
-        "@types/jasmine": "3.5.7",
+        "@types/chart.js": "2.9.24",
+        "@types/crypto-js": "3.1.47",
+        "@types/jasmine": "3.5.14",
         "@types/jasminewd2": "2.0.8",
-        "@types/marked": "0.7.2",
-        "@types/node": "13.7.7",
-        "@types/object-hash": "1.3.1",
-        "@types/prismjs": "1.16.0",
-        "@types/uuid": "7.0.0",
-        "bootstrap": "4.4.1",
-        "chokidar": "3.3.1",
-        "codelyzer": "5.2.1",
-        "concurrently": "5.1.0",
-        "cross-env": "7.0.0",
-        "jasmine-core": "3.5.0",
-        "jasmine-spec-reporter": "4.2.1",
-        "karma": "4.4.1",
+        "@types/marked": "1.1.0",
+        "@types/node": "14.10.2",
+        "@types/object-hash": "1.3.3",
+        "@types/prismjs": "1.16.1",
+        "@types/uuid": "8.3.0",
+        "bootstrap": "4.5.2",
+        "chokidar": "3.4.2",
+        "codelyzer": "6.0.0",
+        "concurrently": "5.3.0",
+        "cross-env": "7.0.2",
+        "jasmine-core": "3.6.0",
+        "jasmine-spec-reporter": "5.0.2",
+        "karma": "5.2.2",
         "karma-chrome-launcher": "3.1.0",
-        "karma-coverage-istanbul-reporter": "2.1.1",
-        "karma-jasmine": "3.1.1",
-        "karma-jasmine-html-reporter": "1.5.2",
-        "prettier": "1.19.1",
-        "protractor": "5.4.3",
-        "pug": "2.0.4",
+        "karma-coverage-istanbul-reporter": "3.0.3",
+        "karma-jasmine": "4.0.1",
+        "karma-jasmine-html-reporter": "1.5.4",
+        "prettier": "2.1.1",
+        "protractor": "7.0.0",
+        "pug": "3.0.0",
         "pug-lint": "2.6.0",
-        "shelljs": "0.8.3",
-        "ts-node": "8.6.2",
-        "tslint": "6.0.0",
-        "tslint-plugin-prettier": "2.1.0",
-        "typescript": "3.7.5"
+        "shelljs": "0.8.4",
+        "ts-node": "9.0.0",
+        "tslint": "6.1.3",
+        "tslint-plugin-prettier": "2.3.0",
+        "typescript": "4.0.2"
     }
 }
