--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "@fortawesome/free-brands-svg-icons": "5.15.1",
         "@fortawesome/free-regular-svg-icons": "5.15.1",
         "@fortawesome/free-solid-svg-icons": "5.15.1",
-        "@ng-bootstrap/ng-bootstrap": "9.1.3",
+        "@ng-bootstrap/ng-bootstrap": "^15.1.1",
         "@prettier/plugin-pug": "1.10.1",
         "change-case": "4.1.1",
         "chart.js": "2.9.4",
@@ -62,7 +62,7 @@
         "date-fns": "2.16.1",
         "marked": "1.2.4",
         "ngx-autosize": "1.8.0",
-        "ngx-markdown": "10.1.1",
+        "ngx-markdown": "^16.0.0",
         "object-hash": "2.0.3",
         "prism": "4.1.2",
         "rxjs": "6.6.3",
