--- a/package.json
+++ b/package.json
@@ -1,115 +1,115 @@
 {
-    "name": "sb-clean-blog-angular",
-    "version": "1.2.0",
-    "scripts": {
-        "build": "npm run build:pug && npm run ng -- build --prod --build-optimizer=true --statsJson=true && npm run build:version",
-        "build:debug": "npm run build:pug && npm run ng -- build --prod --source-map --build-optimizer=true --statsJson=true && npm run build:version",
-        "build:demo": "npm run build && mv dist/sb-clean-blog-angular/assets/config-demo.json dist/sb-clean-blog-angular/assets/config.json",
-        "build:pug": "node scripts/build-pug.js",
-        "build:version": "node scripts/version.js",
-        "bundle-report": "webpack-bundle-analyzer dist/sb-clean-blog-angular/stats-es2015.json",
-        "docker:build": "node scripts/docker/docker-build.js",
-        "docker:run": "node scripts/docker/docker-run.js",
-        "drone:upload": "npm run ts-node -- scripts/drone/upload.ts",
-        "e2e": "npm run ng -- e2e",
-        "e2e:running": "npm run ng -- e2e --dev-server-target=",
-        "generate:component": "ng generate @sbpro/ng:component",
-        "generate:directive": "ng generate @sbpro/ng:directive",
-        "generate:module": "ng generate @sbpro/ng:module",
-        "generate:service": "ng generate @sbpro/ng:service",
-        "link": "npm link @start-bootstrap/sb-clean-blog-shared-types",
-        "lint:fix": "tslint -p . -c tslint.json --fix",
-        "lint": "tslint -p . -c tslint.json",
-        "ng": "cross-env NODE_OPTIONS=--max_old_space_size=2048 ./node_modules/.bin/ng",
-        "serve": "static-server dist/sb-clean-blog-angular",
-        "serve:coverage": "static-server ./coverage/sb-clean-blog-angular 9753",
-        "start": "node scripts/start.js",
-        "test": "npm run ng -- test --watch=false --code-coverage --browsers=ChromeHeadlessNoSandbox",
-        "test:dev": "node scripts/test-dev.js",
-        "ts-node": "ts-node -r tsconfig-paths/register -r dotenv/config -P node_modules/@start-bootstrap/drone-utils/dist/tsconfig-drone.json",
-        "version": "node scripts/version"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/StartBootstrap/sb-clean-blog-angular.git"
-    },
-    "bugs": {
-        "url": "https://github.com/StartBootstrap/sb-clean-blog-angular/issues"
-    },
-    "homepage": "https://github.com/StartBootstrap/sb-clean-blog-angular#readme",
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "11.0.1",
-        "@angular/common": "11.0.1",
-        "@angular/compiler": "11.0.1",
-        "@angular/core": "11.0.1",
-        "@angular/forms": "11.0.1",
-        "@angular/localize": "11.0.1",
-        "@angular/platform-browser": "11.0.1",
-        "@angular/platform-browser-dynamic": "11.0.1",
-        "@angular/router": "11.0.1",
-        "@auth0/angular-jwt": "5.0.1",
-        "@fortawesome/angular-fontawesome": "0.8.0",
-        "@fortawesome/fontawesome-svg-core": "1.2.32",
-        "@fortawesome/free-brands-svg-icons": "5.15.1",
-        "@fortawesome/free-regular-svg-icons": "5.15.1",
-        "@fortawesome/free-solid-svg-icons": "5.15.1",
-        "@ng-bootstrap/ng-bootstrap": "^9.0.0",
-        "@prettier/plugin-pug": "1.10.1",
-        "change-case": "4.1.1",
-        "chart.js": "2.9.4",
-        "crypto-js": "4.0.0",
-        "date-fns": "2.16.1",
-        "marked": "1.2.4",
-        "ngx-autosize": "1.8.0",
-        "ngx-markdown": "^11.2.0",
-        "object-hash": "2.0.3",
-        "prism": "4.1.2",
-        "rxjs": "6.6.3",
-        "tslib": "2.0.3",
-        "uuid": "8.3.1",
-        "webpack-bundle-analyzer": "4.1.0",
-        "zone.js": "0.10.3"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "0.1100.2",
-        "@angular/cli": "11.0.2",
-        "@angular/compiler-cli": "11.0.1",
-        "@angular/language-service": "11.0.1",
-        "@google-cloud/storage": "5.5.0",
-        "@inip/static-server": "1.0.1",
-        "@sbpro/ng": "1.4.2",
-        "@start-bootstrap/drone-utils": "0.1.6",
-        "@start-bootstrap/sb-clean-blog-shared-types": "1.0.1",
-        "@types/chart.js": "2.9.28",
-        "@types/crypto-js": "4.0.1",
-        "@types/jasmine": "3.6.1",
-        "@types/jasminewd2": "2.0.8",
-        "@types/marked": "1.2.0",
-        "@types/node": "14.14.8",
-        "@types/object-hash": "1.3.4",
-        "@types/prismjs": "1.16.2",
-        "@types/uuid": "8.3.0",
-        "bootstrap": "4.5.3",
-        "chokidar": "3.4.3",
-        "codelyzer": "6.0.1",
-        "concurrently": "5.3.0",
-        "cross-env": "7.0.2",
-        "jasmine-core": "3.6.0",
-        "jasmine-spec-reporter": "6.0.0",
-        "karma": "5.1.0",
-        "karma-chrome-launcher": "3.1.0",
-        "karma-coverage-istanbul-reporter": "3.0.3",
-        "karma-jasmine": "4.0.1",
-        "karma-jasmine-html-reporter": "1.5.4",
-        "prettier": "2.1.2",
-        "protractor": "7.0.0",
-        "pug": "3.0.0",
-        "pug-lint": "2.6.0",
-        "shelljs": "0.8.4",
-        "ts-node": "9.0.0",
-        "tslint": "6.1.3",
-        "tslint-plugin-prettier": "2.3.0",
-        "typescript": "4.0.8"
-    }
+  "name": "sb-clean-blog-angular",
+  "version": "1.2.0",
+  "scripts": {
+    "build": "npm run build:pug && npm run ng -- build --configuration production --build-optimizer=true --statsJson=true && npm run build:version",
+    "build:debug": "npm run build:pug && npm run ng -- build --configuration production --source-map --build-optimizer=true --statsJson=true && npm run build:version",
+    "build:demo": "npm run build && mv dist/sb-clean-blog-angular/assets/config-demo.json dist/sb-clean-blog-angular/assets/config.json",
+    "build:pug": "node scripts/build-pug.js",
+    "build:version": "node scripts/version.js",
+    "bundle-report": "webpack-bundle-analyzer dist/sb-clean-blog-angular/stats-es2015.json",
+    "docker:build": "node scripts/docker/docker-build.js",
+    "docker:run": "node scripts/docker/docker-run.js",
+    "drone:upload": "npm run ts-node -- scripts/drone/upload.ts",
+    "e2e": "npm run ng -- e2e",
+    "e2e:running": "npm run ng -- e2e --dev-server-target=",
+    "generate:component": "ng generate @sbpro/ng:component",
+    "generate:directive": "ng generate @sbpro/ng:directive",
+    "generate:module": "ng generate @sbpro/ng:module",
+    "generate:service": "ng generate @sbpro/ng:service",
+    "link": "npm link @start-bootstrap/sb-clean-blog-shared-types",
+    "lint:fix": "tslint -p . -c tslint.json --fix",
+    "lint": "tslint -p . -c tslint.json",
+    "ng": "cross-env NODE_OPTIONS=--max_old_space_size=2048 ./node_modules/.bin/ng",
+    "serve": "static-server dist/sb-clean-blog-angular",
+    "serve:coverage": "static-server ./coverage/sb-clean-blog-angular 9753",
+    "start": "node scripts/start.js",
+    "test": "npm run ng -- test --watch=false --code-coverage --browsers=ChromeHeadlessNoSandbox",
+    "test:dev": "node scripts/test-dev.js",
+    "ts-node": "ts-node -r tsconfig-paths/register -r dotenv/config -P node_modules/@start-bootstrap/drone-utils/dist/tsconfig-drone.json",
+    "version": "node scripts/version"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/StartBootstrap/sb-clean-blog-angular.git"
+  },
+  "bugs": {
+    "url": "https://github.com/StartBootstrap/sb-clean-blog-angular/issues"
+  },
+  "homepage": "https://github.com/StartBootstrap/sb-clean-blog-angular#readme",
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "12.2.17",
+    "@angular/common": "12.2.17",
+    "@angular/compiler": "12.2.17",
+    "@angular/core": "12.2.17",
+    "@angular/forms": "12.2.17",
+    "@angular/localize": "12.2.17",
+    "@angular/platform-browser": "12.2.17",
+    "@angular/platform-browser-dynamic": "12.2.17",
+    "@angular/router": "12.2.17",
+    "@auth0/angular-jwt": "5.0.1",
+    "@fortawesome/angular-fontawesome": "0.8.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.32",
+    "@fortawesome/free-brands-svg-icons": "5.15.1",
+    "@fortawesome/free-regular-svg-icons": "5.15.1",
+    "@fortawesome/free-solid-svg-icons": "5.15.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.0",
+    "@prettier/plugin-pug": "1.10.1",
+    "change-case": "4.1.1",
+    "chart.js": "2.9.4",
+    "crypto-js": "4.0.0",
+    "date-fns": "2.16.1",
+    "marked": "1.2.4",
+    "ngx-autosize": "1.8.0",
+    "ngx-markdown": "^11.2.0",
+    "object-hash": "2.0.3",
+    "prism": "4.1.2",
+    "rxjs": "6.6.3",
+    "tslib": "2.0.3",
+    "uuid": "8.3.1",
+    "webpack-bundle-analyzer": "4.1.0",
+    "zone.js": "~0.11.4"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "12.2.18",
+    "@angular/cli": "12.2.18",
+    "@angular/compiler-cli": "12.2.17",
+    "@angular/language-service": "12.2.17",
+    "@google-cloud/storage": "5.5.0",
+    "@inip/static-server": "1.0.1",
+    "@sbpro/ng": "1.4.2",
+    "@start-bootstrap/drone-utils": "0.1.6",
+    "@start-bootstrap/sb-clean-blog-shared-types": "1.0.1",
+    "@types/chart.js": "2.9.28",
+    "@types/crypto-js": "4.0.1",
+    "@types/jasmine": "3.6.1",
+    "@types/jasminewd2": "2.0.8",
+    "@types/marked": "1.2.0",
+    "@types/node": "14.14.8",
+    "@types/object-hash": "1.3.4",
+    "@types/prismjs": "1.16.2",
+    "@types/uuid": "8.3.0",
+    "bootstrap": "4.5.3",
+    "chokidar": "3.4.3",
+    "codelyzer": "6.0.1",
+    "concurrently": "5.3.0",
+    "cross-env": "7.0.2",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "6.0.0",
+    "karma": "6.4.2",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "1.5.4",
+    "prettier": "2.1.2",
+    "protractor": "7.0.0",
+    "pug": "3.0.0",
+    "pug-lint": "2.6.0",
+    "shelljs": "0.8.4",
+    "ts-node": "9.0.0",
+    "tslint": "6.1.3",
+    "tslint-plugin-prettier": "2.3.0",
+    "typescript": "4.3.5"
+  }
 }
