--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "sb-clean-blog-angular",
   "version": "1.2.0",
   "scripts": {
-    "build": "npm run build:pug && npm run ng -- build --configuration production --build-optimizer=true --statsJson=true && npm run build:version",
-    "build:debug": "npm run build:pug && npm run ng -- build --configuration production --source-map --build-optimizer=true --statsJson=true && npm run build:version",
+    "build": "npm run build:pug && npm run ng -- build --configuration production --build-optimizer=true && npm run build:version",
+    "build:debug": "npm run build:pug && npm run ng -- build --configuration production --source-map --build-optimizer=true && npm run build:version",
     "build:demo": "npm run build && mv dist/sb-clean-blog-angular/assets/config-demo.json dist/sb-clean-blog-angular/assets/config.json",
     "build:pug": "node scripts/build-pug.js",
     "build:version": "node scripts/version.js",
@@ -83,8 +83,8 @@
     "@start-bootstrap/sb-clean-blog-shared-types": "1.0.1",
     "@types/chart.js": "2.9.28",
     "@types/crypto-js": "4.0.1",
-    "@types/jasmine": "3.6.1",
-    "@types/jasminewd2": "2.0.8",
+    "@types/jasmine": "^4.3.5",
+    "@types/jasminewd2": "^2.0.10",
     "@types/marked": "4.3.1",
     "@types/node": "14.14.8",
     "@types/object-hash": "1.3.4",
@@ -95,21 +95,21 @@
     "codelyzer": "6.0.1",
     "concurrently": "5.3.0",
     "cross-env": "7.0.2",
-    "jasmine-core": "3.6.0",
-    "jasmine-spec-reporter": "6.0.0",
-    "karma": "6.4.2",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.5.4",
+    "jasmine-core": "^5.1.1",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "prettier": "2.1.2",
     "protractor": "7.0.0",
     "pug": "3.0.0",
     "pug-lint": "2.6.0",
-    "shelljs": "0.8.4",
-    "ts-node": "9.0.0",
-    "tslint": "6.1.3",
-    "tslint-plugin-prettier": "2.3.0",
+    "shelljs": "^0.8.5",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "tslint-plugin-prettier": "^2.3.0",
     "typescript": "4.9.3"
   }
 }
